--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@angular/router": "3.4.0",
     "@angular/upgrade": "2.4.0",
     "angular-in-memory-web-api": "0.3.1",
-    "bootstrap": "3.3.6",
     "core-js": "2.4.1",
     "promise-polyfill": "6.1.0",
     "reflect-metadata": "0.1.3",
@@ -29,8 +28,10 @@
     "zone.js": "0.7.2"
   },
   "devDependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "bower-files": "3.11.3",
     "browser-sync": "2.11.1",
+    "concurrently": "3.0.0",
     "del": "2.2.0",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.0",
@@ -39,9 +40,19 @@
     "gulp-sourcemaps": "1.6.0",
     "gulp-uglify": "1.5.3",
     "gulp-util": "3.0.7",
-    "concurrently": "3.0.0",
     "lite-server": "2.2.2",
     "typescript": "2.2.2",
     "typings": "1.3.2"
-  }
+  },
+  "main": "gulpfile.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sravyy/Local-Zoo.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/Sravyy/Local-Zoo/issues"
+  },
+  "homepage": "https://github.com/Sravyy/Local-Zoo#readme",
+  "description": ""
 }
